# ChangeLog for dev-lang/orc
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-lang/orc/ChangeLog,v 1.8 2010/10/08 09:31:01 ford_prefect Exp $

*orc-0.4.10 (08 Oct 2010)

  08 Oct 2010; Arun Raghavan <ford_prefect@gentoo.org> +orc-0.4.10.ebuild:
  Bump to 0.4.10. Bunch of 64-bit and SSE improvements amongst other fixes.

*orc-0.4.9 (08 Sep 2010)

  08 Sep 2010; Arun Raghavan <ford_prefect@gentoo.org> +orc-0.4.9.ebuild,
  +files/orc-0.4.9-make-valgrind-optional.patch:
  Bump to 0.4.9

*orc-0.4.7 (21 Aug 2010)

  21 Aug 2010; Samuli Suominen <ssuominen@gentoo.org> +orc-0.4.7.ebuild:
  Version bump.

*orc-0.4.5 (16 Jun 2010)

  16 Jun 2010; Markos Chandras <hwoarang@gentoo.org> +orc-0.4.5.ebuild:
  Version bump. Added examples use flag. Fixes bug #317447

  30 May 2010; Fabian Groffen <grobian@gentoo.org> orc-0.4.4.ebuild:
  Marked *-macos, *-solaris

  15 May 2010; Samuli Suominen <ssuominen@gentoo.org> orc-0.4.4.ebuild:
  USE static-libs wrt #317447 by Toffanin Mauro.

  26 Apr 2010; Jeremy Olexa <darkside@gentoo.org> orc-0.4.4.ebuild:
  Move to EAPI3, tested on ~amd64-linux

*orc-0.4.4 (21 Apr 2010)

  21 Apr 2010; Samuli Suominen <ssuominen@gentoo.org> +orc-0.4.4.ebuild:
  Initial commit.
