@@ -1,6 +1,11 @@
 # ChangeLog for dev-lang/orc
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/orc/ChangeLog,v 1.8 2010/10/08 09:31:01 ford_prefect Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/orc/ChangeLog,v 1.9 2010/10/15 10:05:50 ford_prefect Exp $
+
+*orc-0.4.11 (15 Oct 2010)
+
+  15 Oct 2010; Arun Raghavan <ford_prefect@gentoo.org> +orc-0.4.11.ebuild:
+  Bump to 0.4.11. Bunch of bug fixes. Still has some problems on armv6, etc.
 
 *orc-0.4.10 (08 Oct 2010)
 
